--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   test-lint:
     name: Test and test-lint
-    runs-on: ubuntu-20-04
+    runs-on: ubuntu-20.04
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
