--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 # This file is used to list all the dependencies that are required by the project
 Django>=3.2.4,<3.3
 djangorestframework>=3.12.4,<3.13
+psycopg2>=2.8.6,<2.9
